apps/paperless-ngx/paperless/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless-ngx
  labels:
    gateway-access: paperless-ngx
