apps/paperless-ngx/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-web
  namespace: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-web
  template:
    metadata:
      labels:
        app: paperless-web
    spec:
      nodeSelector:
        affected_vlan: "50"
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:3.1.3@sha256:aa810a36942c63d4ee70d00eda7236cd3d6acfb7eb3f7987fb568ed14df8817a
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: export
              mountPath: /usr/src/paperless/export
            - name: consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
        - name: export
          persistentVolumeClaim:
            claimName: paperless-export
        - name: consume
          persistentVolumeClaim:
            claimName: paperless-consume
