apps/paperless-ngx/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
