apps/paperless-ngx/paperless/route.yaml
# apps/paperless-ngx/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx-route
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: ingress-gateway
      namespace: cluster-gateway
      sectionName: paperless-ngx-https     # Attach to the HTTPS listener
  hostnames:
    - "paperless-ngx.hoareau-marion.eu"
  rules:
    - backendRefs:
        - name: paperless-web
          port: 8000
